# Platformer_DMC_Inspired

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run_game.bat  tastatura.txt
.github/actions/clang-tidy/: action.yml
.github/actions/install-packages/: action.yml
.github/workflows/: cmake.yml
include/: Castle.h  DMCExceptions.h  Demon.h  Player.h  Weapon.h
scratch/test_sfml/: CMakeLists.txt  main.cpp
src/: Castle.cpp  Demon.cpp  Player.cpp  Weapon.cpp
